<resources>
    <string name="app_name">Ngekost</string>
    <string name="info_version">2021 Project PAM</string>
    <string name="getStarted">Get Started</string>
    <string name="mulai">Mulai</string>
    <string name="singin">SIGN IN</string>
    <string name="newAccount">NEW ACCOUNT</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="email_label">Email Address</string>
    <string name="name_label">Nama</string>
    <string name="Bio_label">Bio</string>
    <string name="explore">EXPLORE NOW</string>
    <string name="title_activity_detail">DetailAct</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="pesan_sekarang">Pesan Sekarang</string>
    <string name="akses_wifi_yang_anda_inginkan">Akses wifi yang anda inginkan</string>
    <string name="wifi_available">Wifi Available</string>
    <string name="ruang_tamu_untuk_tamu_anda">Ruang tamu untuk tamu anda</string>
    <string name="akses_ruang_tamu">Akses Ruang tamu</string>
    <string name="fasilitas_yang_didapat">Fasilitas yang didapat:</string>
    <string name="informasi_sewa">Informasi Sewa</string>
    <string name="bangunjiwo_kasihan_085713742968">Bangunjiwo, Kasihan 085713742968</string>
    <string name="kost_putri_amartha_umy">Kost Putri Amartha UMY</string>
    <string name="mulai_mencari_bersama_Ngekost">Mulai mencari bersama Ngekost</string>
    <string name="todo">todo</string>
    <string name="amalia_husna">AMALIA HUSNA</string>
    <string name="mahasiswa_teknologi_informasi_umy">Mahasiswa Teknologi Informasi UMY</string>
    <string name="mencari_kos_bersama_ngekost">Mencari Kos Bersama Ngekost</string>
</resources>